Incremental commit, todo: navbar, transit component, get slug for sel projects, footer with form, then all projects page, about page, photography page (flickr api?)

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -10,9 +10,11 @@
 }
 
 $breakpoints: (
-    "lg": 992px,
-    "xl": 1200px,
-    "xxl": 1400px
+    "sm": 640px,
+    "md": 768px,
+    "lg": 1024px,
+    "xl": 1280px,
+    "xxl": 1536px
 ) !default;
 
 // Mixin to manage responsive breakpoints
