--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,3 +1,7 @@
+// Generic stuff for text
+// Might not use all of the below but leaving it in
+
+
 // Rollup effect on hover states. Maybe create a UI partial...
 .hover {
     overflow: hidden;
