--- a/assets/scss/_functions.scss
+++ b/assets/scss/_functions.scss
@@ -21,10 +21,12 @@
   Note that f-breakpoints is same as in mixins partial but importing from mixins would lead to duplicate forwarding in global
  */
 
- $f-break: (
-    "lg": 992px,
-    "xl": 1200px,
-    "xxl": 1920px
+$f-break: (
+    "sm": 640px,
+    "md": 768px,
+    "lg": 1024px,
+    "xl": 1280px,
+    "xxl": 1536px
 ) !default;
 
 $default-min-bp: map.get($f-break, "lg");
