theme tuning, tomorrow finalize image response on rollover and do nav before getting going on work / lab page

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,6 +3,11 @@ $secondary: #1E201E; // font
 $accent1:#395B64;
 $accent2:#A5C9CA;
 
+$primary: #f4f3ee; // bg
+$secondary: #252422; // font
+$accent1:#eb5e28;
+$accent2:#ccc5b9;
+
 // Fonts
 $sans-ui: "Lexend", sans-serif;
 $sans-ui-opt: auto;
