[200~ user@HEMINGWAY-2 MINGW64 /d/Workspace/_projects/github/portfolio-2025-nuxt (main) $ git commit -m

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,13 +8,15 @@ $secondary: #252422; // font
 $accent1:#eb5e28;
 $accent2:#ccc5b9;
 
-// Fonts
-$sans-ui: "Lexend", sans-serif;
+// Font
+$serif-head:"Crimson Text";
+
+$sans-ui: "Lexend";
 $sans-ui-opt: auto;
 $sans-ui-wgt: 600;
 $sans-ui-stl: normal;
 
-$sans-text: "Sora", sans-serif;
+$sans-text: "Sora";
 $sans-text-opt: auto;
 $sans-text-wgt: 500;
 $sans-text-stl: normal;
